# proxmox-hetzner-autoconfigure

./: .gitignore  .pylintrc  INSTALLING-PROXMOX.md  README.md  README.rst  pyproject.toml
proxmox_hetzner_autoconfigure/: main.py  next-steps.jinja2
proxmox_hetzner_autoconfigure/configurators/: __init__.py  configurator.py
proxmox_hetzner_autoconfigure/configurators/backup/: backup.py  template.jinja2
proxmox_hetzner_autoconfigure/configurators/lvm_thin_storage/: lvm_thin_storage.py  template.jinja2
proxmox_hetzner_autoconfigure/configurators/network/: network.py
proxmox_hetzner_autoconfigure/configurators/network/topologies/: routed_separate_ips.jinja2  routed_separate_ips.py  routed_subnet.jinja2  routed_subnet.py  routed_wrapper.jinja2
proxmox_hetzner_autoconfigure/configurators/snippets/: dnsmasq.jinja2  dnsmasq.toml  lvm_thin.jinja2  lvm_thin.toml  security.jinja2  security.toml  snippets.py  template.jinja2
proxmox_hetzner_autoconfigure/configurators/storage_box/: storage_box.py  template.jinja2
proxmox_hetzner_autoconfigure/configurators/tls/: template.jinja2  tls.py
proxmox_hetzner_autoconfigure/configurators/wireguard/: template.jinja2  wireguard.py
proxmox_hetzner_autoconfigure/util/: heredoc.jinja2  install.jinja2  util.py
tests/: test_end_to_end.py
tests/configurators/: test_lvm_thin_storage.py  test_network.py  test_snippets.py  test_storage_box.py  test_tls.py
tests/configurators/network/topologies/: test_routed_separate_ips.py  test_routed_subnet.py
