[tool.poetry]
authors = ["John Knott <john.knott@gmail.com>"]
description = "Helps to configure Proxmox on Hetzner. Takes over where Hetzner installimage left off"
name = "proxmox-hetzner-autoconfigure"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
ipdb = "^0.13.3"
jinja2 = "^2.11.2"
python = "^3.6"
pythondialog = "^3.5.1"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.2"
pylint = "<2.0.0"

[tool.poetry.scripts]
proxmox-hetzner-autoconfigure = 'proxmox_hetzner_autoconfigure.main:run'

[tool.black]
line-length = 100
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
